--- a/projects/instructional/final/step2.html
+++ b/projects/instructional/final/step2.html
@@ -249,17 +249,17 @@ body#home #mynav li:nth-child(1) a {
     </nav>
 <main>
     <div class="container box1">
-    <img class="photography" src="../images/step1_instr02_rsdesk.webp" alt="photography">
+    <img class="photography" src="https://placehold.co/900x500" alt="placeholder">
     </div>
-    <div class="container box2"><h2>Step 1:</h2></div>
-    <div class="container box3"><h1>Empty old contents</h1></div>
+    <div class="container box2"><h2>Title Goes Here</h2></div>
+    <div class="container box3"><h1>Subtitle Goes Here</h1></div>
     <div class="container box4">
         <div class="col67">
-            <p>Open the machine to reveal the filter compartment. Remove filter basket with contents inside and dispose of old filter and grounds. Place basket back in machine.</p>
+            <p>Just bought your first coffee pot? Turning to caffeine as a quick-fix for your lack of sleep? This at-home brewing guide will teach you how to make the best cup of coffee, simply.</p>
         </div>
         <div class="col33">
             <div class="stepbutton">
-                <a href="step2.html"><button class="next-button"><img class= "right-arrow" src="../images/arrow-right.svg" alt="next-button"></button></a>
+                <a href="step1.html"><button class="next-button"><img class= "right-arrow" src="../images/arrow-right.svg" alt="next-button"></button></a>
             </div>
         </div>
     </div>
