--- a/projects/instructional/final/step7.html
+++ b/projects/instructional/final/step7.html
@@ -219,10 +219,10 @@ p {
         height: auto;
 }
 }
-body#home #mynav li:nth-child(2) {
+body#home #mynav li:nth-child(7) {
     background-color: white;
 }
-body#home #mynav li:nth-child(2) a {
+body#home #mynav li:nth-child(7) a {
     color: #EC4A4A;
 }
 </style>
@@ -249,17 +249,17 @@ body#home #mynav li:nth-child(2) a {
     </nav>
 <main>
     <div class="container box1">
-    <img class="photography" src="../images/step2_instr03_rsdesk.webp" alt="photography">
+    <img class="photography" src="../images/step7_instr08_rsdesk.webp" alt="photography">
     </div>
-    <div class="container box2"><h2>Step 2:</h2></div>
-    <div class="container box3"><h1>Replace filter & fill</h1></div>
+    <div class="container box2"><h2>Step 7:</h2></div>
+    <div class="container box3"><h1>Add cream & sugar</h1></div>
     <div class="container box4">
         <div class="col67">
-            <p>Place a new filter, size dependent upon the size of your coffee pot, and place in the basket. Fill with your choice of coffee grounds.</p>
+            <p>An optional step in the process, though highly suggested for new coffee-drinkers. Pour desired amount of cream and sugar in mug of coffee.</p>
         </div>
         <div class="col33">
             <div class="stepbutton">
-                <a href="step3.html"><button class="next-button"><img class= "right-arrow" src="../images/arrow-right.svg" alt="next-button"></button></a>
+                <a href="step8.html"><button class="next-button"><img class= "right-arrow" src="../images/arrow-right.svg" alt="next-button"></button></a>
             </div>
         </div>
     </div>
