--- a/projects/bookpromo/final/look-inside.html
+++ b/projects/bookpromo/final/look-inside.html
@@ -2,10 +2,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Will Ramos: The Biography</title>
+    <title>Look Inside - Will Ramos: The Biography</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=League+Spartan:wght@100..900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet"/>
+    <link rel="shortcut icon" href="./images/alison_brown_willramoslogo_favicon.svg" type="image/x-icon">
+    <link rel="icon" href="./images/alison_brown_willramoslogo_favicon.svg" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/alison_brown_willramoslogo_appletouch.svg">
     <link rel="stylesheet" href="bookstyles.css">
     <style>
         .infoblock1 {
@@ -60,7 +63,7 @@
     <button id="toggle-nav">☰</button>
     <header>
       <div class="flex">
-        <div id="logo"><img src="https://placehold.co/150x100" alt="homeicon"></div>
+        <div id="logo"><a class="homeicon" href="index.html"><img src="./images/alison_brown_willramoslogo-01.svg" alt="homeicon"></a></div>
         <nav id="primary-nav">
           <div class="inner">
             <ul>
@@ -79,17 +82,17 @@
       <div class="infoblock1">
         <div class="col50">
             <p>
-                Will Ramos, vocalist of the metalcore band Lorna Shore, made waves in the music industry with his unique blend of technical skill and emotional depth. Will was born in 1994 in the state of New Jersey. His early exposure to genres like punk, rock, and hip-hop ignited a passion for music that would shape his life. With his continued exploration of the music scene, Will discovered his affinity for the extreme vocal techniques that define metalcore, mastering the art of blending harsh vocals with melodic undertones.
-              </p>
+                "Will Ramos, vocalist of the metalcore band Lorna Shore, made waves in the music industry with his unique blend of technical skill and emotional depth. Will was born in 1994 in the state of New Jersey. His early exposure to genres like punk, rock, and hip-hop ignited a passion for music that would shape his life. With his continued exploration of the music scene, Will discovered his affinity for the extreme vocal techniques that define metalcore, mastering the art of blending harsh vocals with melodic undertones.
+            </p>
         </div>
         <div class="col50">
           <p>
-            This dedication to his craft set him apart in a genre that thrives on innovation. Will’s journey took a pivotal turn when he joined Lorna Shore in 2020, a band already renowned for their intense sound and dynamic performances. Originally a fill-in for their tour, it was not long before Will’s talent was recognized and his position within the group solidified. Soon after his arrival and the release of new music, the band quickly gained traction, earning millions of views and cementing Lorna Shore’s place in the modern metal scene.
+            This dedication to his craft set him apart in a genre that thrives on innovation. Will’s journey took a pivotal turn when he joined Lorna Shore in 2020, a band already renowned for their intense sound and dynamic performances. Originally a fill-in for their tour, it was not long before Will’s talent was recognized and his position within the group solidified. Soon after his arrival and the release of new music, the band quickly gained traction, earning millions of views and cementing Lorna Shore’s place in the modern metal scene."
           </p>
         </div>
       </div>
       <div class="infoblock2">
-        <a href="#" class="redboxlink">Preorder</a>
+        <a href="preorder.html" class="redboxlink">Preorder</a>
     </div>
     </main>
     <script>
