--- a/projects/bookpromo/final/index.html
+++ b/projects/bookpromo/final/index.html
@@ -6,13 +6,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=League+Spartan:wght@100..900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet"/>
+    <link rel="shortcut icon" href="./images/alison_brown_willramoslogo_favicon.svg" type="image/x-icon">
+    <link rel="icon" href="./images/alison_brown_willramoslogo_favicon.svg" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/alison_brown_willramoslogo_appletouch.svg">
     <link rel="stylesheet" href="bookstyles.css">
   </head>
   <body>
     <button id="toggle-nav">☰</button>
     <header>
       <div class="flex">
-        <div id="logo"><a ref="home.html"><img src="https://placehold.co/150x100" alt="homeicon"></a></div>
+        <div id="logo"><a class="homeicon" href="index.html"><img src="./images/alison_brown_willramoslogo-01.svg" alt="homeicon"></a></div>
         <nav id="primary-nav">
           <div class="inner">
             <ul>
@@ -26,10 +29,10 @@
       </div>
     </header>
     <main>
-      <h1>Title Here</h1>
+      <h1>Jane Doe's Newest Biography</h1>
       <div class="infoblock1">
         <div class="col50">
-          <img src="https://placehold.co/300x500" alt="bookcover">
+          <img src="./images/front_alison_brown_book.webp" alt="bookcover">
         </div>
         <div class="col50">
           <p>
