--- a/projects/bookpromo/final/preorder.html
+++ b/projects/bookpromo/final/preorder.html
@@ -2,10 +2,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Will Ramos: The Biography</title>
+    <title>Preorder - Will Ramos: The Biography</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=League+Spartan:wght@100..900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet"/>
+    <link rel="shortcut icon" href="./images/alison_brown_willramoslogo_favicon.svg" type="image/x-icon">
+    <link rel="icon" href="./images/alison_brown_willramoslogo_favicon.svg" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/alison_brown_willramoslogo_appletouch.svg">
     <link rel="stylesheet" href="bookstyles.css">
     <style>
         .infoblock1 {
@@ -42,7 +45,7 @@
     <button id="toggle-nav">☰</button>
     <header>
       <div class="flex">
-        <div id="logo"><img src="https://placehold.co/150x100" alt="homeicon"></div>
+        <div id="logo"><a class="homeicon" href="index.html"><img src="./images/alison_brown_willramoslogo-01.svg" alt="homeicon"></a></div>
         <nav id="primary-nav">
           <div class="inner">
             <ul>
@@ -59,10 +62,10 @@
       <h1>Preorder Now</h1>
       <div class="infoblock1">
         <div class="col50">
-          <img src="https://placehold.co/300x500" alt="bookcover">
+          <img src="./images/front_alison_brown_book.webp" alt="bookcover">
         </div>
         <div class="col50">
-            <img src="https://placehold.co/300x500" alt="bookcover">
+            <img src="./images/back_alison_brown_book.webp" alt="bookcover">
         </div>
       </div>
       <div class="infoblock2">
