--- a/projects/smallbusiness/template.html
+++ b/projects/smallbusiness/template.html
@@ -38,20 +38,24 @@
     <div class="hero-banner">
         <img src="https://placehold.co/650x450" alt="placeholder">
     </div>
-    <div class="content-850">
+    <div class="content-850-head">
         <h2>A</h2><h1> Safe Haven </h1><h2> in the </h2>
     </div>
     <div class="content-850">
         <h1>Heart</h1><h2> of </h2><h1><i>Harrisburg</i></h1>
     </div>
-    <div class="content-850">
+    <div class="content-850-subhead">
         <h3>Good Coffee & Good Company</h3>
         <p>Every drink is a reflection of Jacob and Emily's journey—one brewed with love, dedication, and an unwavering belief that coffee has the power to bring people together.</p>
     </div>
         <div class="info-banner">
             <div class="content-850-flex">
-            <div class="col50"><img src="https://placehold.co/400x400" alt="placeholder"></div>
-            <div class="col50"><img src="https://placehold.co/400x400" alt="placeholder"></div>
+            <div class="col50"><img src="https://placehold.co/400x400" alt="placeholder">
+              <a class="explore-link" href="#">Explore Menu</a>
+            </div>
+            <div class="col50"><img src="https://placehold.co/400x400" alt="placeholder">
+              <a class="explore-link" href="#">Explore Events</a>
+            </div>
         </div>
     </div>
     </main>
