--- a/projects/smallbusiness/template.html
+++ b/projects/smallbusiness/template.html
@@ -25,10 +25,10 @@
         <nav id="primary-nav">
           <div class="inner">
             <ul>
-              <li><a href="#">Look Inside</a></li>
-              <li><a href="#">Reviews</a></li>
-              <li><a href="#">Author</a></li>
-              <li><a href="#">Preorder</a></li>
+              <li><a href="#">Coffee & More</a></li>
+              <li><a href="#">Events</a></li>
+              <li><a href="#">Our Story</a></li>
+              <li><a href="#">Contact</a></li>
             </ul>
           </div>
         </nav>
