--- a/projects/smallbusiness/final/index.html
+++ b/projects/smallbusiness/final/index.html
@@ -41,7 +41,7 @@
     </header>
     <main>
     <div class="hero-banner">
-      <div class="content-850"><img src="../images/hero-image.webp" alt="placeholder"></div>
+      <div class="content-850"><img class="hero-image" src="../images/hero-image.webp" alt="placeholder"></div>
     </div>
     <div class="content-850-head">
         <h2>A</h2><h1> Safe Haven </h1><h2> in the </h2>
