--- a/projects/smallbusiness/final/events.html
+++ b/projects/smallbusiness/final/events.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coffee & More - Brews & Bonds Coffee</title>
+    <title>Events - Brews & Bonds Coffee</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
